// Root build.gradle - Multi-project coordinator
plugins {
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

group = 'com.github.istin'
version = "${version}"

// Common configuration for all subprojects
subprojects {
    // Apply common plugins
    apply plugin: 'java-library'
    apply plugin: 'jacoco'
    
    // Common group and version
    group = 'com.github.istin'
    version = rootProject.version
    
    // Java version configuration
    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }
    
    // Common repositories
    repositories {
        mavenCentral()
        maven { url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY') ?: project.findProperty('githubRepo') ?: 'IstiN/dmtools-cli'}") }
    }
    
    // Common encoding
    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    // Common test configuration
    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed", "standardOut", "standardError"
            exceptionFormat "full"
        }
        finalizedBy jacocoTestReport
    }
    
    // Common JaCoCo configuration
    jacocoTestReport {
        reports {
            xml.required.set(true)
            html.required.set(true)
        }
    }
}

// Root project tasks
tasks.register('cleanAll') {
    description = 'Cleans all subprojects'
    group = 'build'
    dependsOn subprojects.collect { it.tasks.named('clean') }
}

tasks.register('buildAll') {
    description = 'Builds all subprojects'
    group = 'build'
    dependsOn subprojects.collect { it.tasks.named('build') }
}

tasks.register('testAll') {
    description = 'Runs tests for all subprojects'
    group = 'verification'
    dependsOn subprojects.collect { it.tasks.named('test') }
}